# JPEG_encode

./: CMakeLists.txt  GENJPG.cpp  Global.h  JPEG.cpp
